@@ -1,3 +1,7 @@
+2010-09-08 Sasa Bojanic <sasaboy@together.at>
+   # twe-doc-current.html removed from docu
+   # docu in documentation folder of the distribution is now unpacked
+
 2010-09-07 Sasa Bojanic <sasaboy@together.at>
    # fixed docbook docu and build scripts to solve picture and table sizing issues in PDFs
    # added TAS dependency build (the zip file which is same as a normal but with a twe.zip name)
